src/test/deca/syntax/invalid/homemade/includeNotExisting.deca
// Description :
//      Empty program
//
// Results :
//      include file not found
// History :
//      created on 9/01/2020

#include "included42.decah"

{
    println("this should not work");
}
